<resources>
    <string name="app_name">Covid19 Tracker</string>
    <string name="signin_string">Sign in</string>
    <string name="code_string">Code</string>
    <string name="phone_string">Phone</string>
    <string name="submit_string">Submit</string>
    <string name="moreinfo_string">More Info</string>
    <string name="confirmotp_string">Confirm OTP</string>
    <string name="timeout_string">Waiting for OTP</string>
    <string name="otp_string">OTP</string>
    <string name="signininfo_string">Enter Your Phone Number</string>
    <string name="title_activity_post_logged_in">PostLoggedInActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="show_log">Show Logged Users</string>
    <string name="senddatadescription_string">If you have been requested to send your data to us, please click on the send button. Your corporation is much appreciated.</string>


</resources>
