<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/authenticationActivity_RL"
    android:orientation="vertical"
    tools:context=".AuthenticationActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appNameString_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signinString_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameString_TV"
        android:layout_marginTop="70dp"
        android:text="@string/signin_string"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signininfoString_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signinString_TV"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:text="@string/signininfo_string"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <!--    Waiting to submit Phone Number-->

    <RelativeLayout
        android:id="@+id/codePhone_RL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signininfoString_TV"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countrycode_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/code_string">

            <AutoCompleteTextView
                android:id="@+id/countrycode_ACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumber_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="@string/phone_string">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumber_TIET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/moreInfoSubmit_RL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@+id/codePhone_RL"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitPhone_B"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/submit_string"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/moreInfo_B"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/moreinfo_string"
            android:textSize="15sp" />
    </RelativeLayout>

    <!--    When phone number is submitted and waiting for OTP-->

    <RelativeLayout
        android:id="@+id/otp_RL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signininfoString_TV"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpNumber_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="@string/otp_string">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otpNumber_TIET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:maxLength="6" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/confirmOTP_RL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_below="@+id/codePhone_RL"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitOTP_B"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/confirmotp_string"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otptimeout_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/timeout_string" />

    </RelativeLayout>
</RelativeLayout>